user routes and swagger updated
